# rust-apis

./: Cargo.toml
blog/: .env  Cargo.toml
blog/src/: config.rs  main.rs
blog/src/models/: blog.rs  category.rs  common.rs  image.rs  mod.rs
blog/src/routes/: blog.rs  category.rs  image.rs  mod.rs
blog/src/utils/: traits.rs
ecommerce/: .env  Cargo.toml
ecommerce/migrations/: 20240301_create_tables.sql  20240303231750_update_type.sql
ecommerce/src/: main.rs
ecommerce/src/handlers/: mod.rs  order.rs  product.rs  review.rs  user.rs
ecommerce/src/models/: cart.rs  cart_products.rs  mod.rs  order.rs  order_products.rs  product.rs  review.rs  user.rs
ecommerce/src/models/enums/: category.rs  mod.rs  user_role.rs
ecommerce/src/utils/: traits.rs
mdl-mal/: .env  Cargo.toml
mdl-mal/src/: config.rs  main.rs
mdl-mal/src/handlers/: mod.rs
mdl-mal/src/handlers/anime/: mod.rs
mdl-mal/src/handlers/drama/: mod.rs
mdl-mal/src/models/: actor.rs  anime.rs  anime_character.rs  anime_episode.rs  article_anime.rs  article_show.rs  database.rs  enums.rs  episode.rs  list.rs  mod.rs  person_article.rs  photo.rs  review.rs  show.rs  studio.rs  user.rs  voice_actor.rs
mdl-mal/src/models/anime/: anime.rs  anime_article.rs  anime_character.rs  anime_character_review.rs  anime_episode.rs  anime_episode_review.rs  anime_list.rs  anime_photo.rs  anime_review.rs  anime_studio.rs  anime_voice_actor.rs  mod.rs
mdl-mal/src/models/drama/: drama.rs  drama_actor.rs  drama_actor_article.rs  drama_article.rs  drama_episode.rs  drama_episode_review.rs  drama_list.rs  drama_photo.rs  drama_review.rs  mod.rs
mdl-mal/src/utils/: database.rs  mod.rs  traits.rs
mdl-mal/src/utils/enums/: actor_type.rs  anime_genres.rs  anime_show.rs  drama_genres.rs  gender.rs  mod.rs  rating.rs  user_type.rs
music-api/: .env  Cargo.toml
music-api/src/: config.rs  main.rs
music-api/src/handlers/: authenticate.rs
pokemon-team-builder/: .env  Cargo.toml
pokemon-team-builder/migrations/: 20240306051106_first.down.sql  20240306051106_first.up.sql
pokemon-team-builder/src/: .env  config.rs  handlers.rs  main.rs  models.rs  utils.rs
pokemon-team-builder/src/handlers/: abilities.rs  games.rs  mod.rs  moves.rs  pokedex.rs  pokemon.rs  service.rs  team.rs  users.rs
pokemon-team-builder/src/models/: abilities.rs  enums.rs  games.rs  mod.rs  moves.rs  moves_pokemon.rs  pokemon.rs  stats.rs  team_pokemon.rs  teams.rs  traits.rs  user.rs
pokemon-team-builder/src/models/enums/: games.rs  genders.rs  natures.rs  region.rs  stats.rs  tier.rs  types.rs
pokemon-team-builder/src/utils/: time.rs  traits.rs
todo/: .env  Cargo.toml
todo/src/: main.rs
