[package]
name = "mdl-mal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
bcrypt = "0.15.0"
bson = { version = "2.9.0", features = ["chrono-0_4", "serde_with"] }
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["env", "derive"] }
dotenv = { version = "0.15.0", features = ["clap"] }
futures = "0.3.30"
http = "1.0.0"
jsonwebtoken = "9.2.0"
mongodb = "2.8.1"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
