[package]
name = "music-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
bcrypt = "0.15.0"
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
reqwest = "0.11.25"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["tls-native-tls", "macros", "postgres", "uuid", "chrono", "json"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
