[package]
name = "music-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["multipart"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
bcrypt = "0.15.0"
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
reqwest = { version = "0.11.25", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["tls-native-tls", "macros", "postgres", "uuid", "chrono", "json", "runtime-tokio"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
